--- a/scss/_header-navbar.scss
+++ b/scss/_header-navbar.scss
@@ -10,6 +10,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     .navbar-expand-lg .navbar-nav .nav-link {
       padding: 15px;
+      transition: 0.25s;
     }
   }
 }
