--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -4,11 +4,9 @@ body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
 }
-.test {
-  width: 200px;
-  height: 200px;
-  background-color: #123;
+h3 {
+  font-size: 24px;
 }
-.item {
-  background-color: #fff;
+h4 {
+  font-size: 18px;
 }
