added features jquery.nav.js

--- a/scss/_bootstrap-theaming.scss
+++ b/scss/_bootstrap-theaming.scss
@@ -21,10 +21,16 @@
   &-nav {
     margin-right: -15px;
   }
-} 
+}
 .nav-item {
   &.active {
     background-color: $color-active;
+    &:hover {
+      a:hover {
+        background-color: $color-active !important;
+        color: #eeeeee !important;
+      }
+    }
   }
 }
 .carousel {
