--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@
   background-color: #ee3b24;
 }
 
+.nav-item.active:hover a:hover {
+  background-color: #ee3b24 !important;
+  color: #eeeeee !important;
+}
+
 .carousel-inner {
   background-color: #111111;
 }
@@ -99,6 +104,7 @@
 }
 
 body {
+  overflow-x: hidden;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
 }
@@ -131,7 +137,6 @@ h4 {
 }
 
 .page-section {
-  overflow: hidden;
   padding: 50px 0;
 }
 
