--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,7 @@
-
 @import "_variables";
-@import "_mixins";
-
 @import "_bootstrap-theaming";
 @import "_common";
 @import "_header-navbar";
 @import "_main";
 @import "_footer";
+@import "_media";
