--- a/scss/_header-navbar.scss
+++ b/scss/_header-navbar.scss
@@ -5,7 +5,7 @@
   }
   &--modifier {
     background-color: rgba(0, 0, 0, 0.7);
-    .navbar-expand-lg .navbar-nav .nav-link {
+    .navbar-expand-md .navbar-nav .nav-link {
       padding: 15px;
       transition: 0.25s;
     }
